package Interface;

public interface TakeOff {
    void takeOff();
}
