package Interface;

import Wigs.Wig;

public interface TryOn {
   void tryOn(Wig wig);
}
