package Wigs;

public enum Color {
    GOLD,
    RED,
    BLACK,
    NOWIG
}
