package Wigs;

import java.util.Objects;

public abstract class Wig {
    protected String color;
    protected String type;
    protected String decoration;



    public abstract void suit();
    public abstract String getColor();

}
